<resources>
    <string name="app_name">BorrowBook</string>
    <string name="start_choose_order">开始选餐</string>
    <string name="name">姓名</string>
    <string name="input_name">请输入姓名</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="sex">性别</string>
    <string name="favorite">喜好</string>
    <string name="hot">辣</string>
    <string name="sour">酸</string>
    <string name="seafood">海鲜</string>
    <string name="budget">预算</string>
    <string name="zero_yuan">0元</string>
    <string name="one_hundred_yuan">100元</string>
    <string name="next">下一个</string>
    <string name="display_info">显示信息</string>
    <string name="search_food">查找菜品</string>
</resources>