<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_choose_order"
        android:textSize="30sp"
        android:background="#B9B9FF"
        android:textColor="#8A2BE2"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="22sp"/>
            <EditText
                android:id="@+id/input_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/input_name"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="22sp"/>
            <RadioGroup
                android:id="@+id/sex_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/female_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/female"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                android:textSize="22sp"/>

            <CheckBox
                android:id="@+id/hot_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot"
                android:textSize="22sp"/>
            <CheckBox
                android:id="@+id/sour_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sour"
                android:textSize="22sp"/>
            <CheckBox
                android:id="@+id/seafood_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/seafood"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                android:textSize="22sp"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/zero_yuan"/>
            <SeekBar
                android:id="@+id/price_seek_bar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:max="100"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/one_hundred_yuan"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/search_btn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/search_food"/>

        <ImageView
            android:id="@+id/food_imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_weight="3"/>
        <ToggleButton
            android:id="@+id/food_toggle_btn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textOff="@string/next"
            android:textOn="@string/display_info"/>

    </LinearLayout>

</LinearLayout>